[package]
name = "rocky"
version = "0.1.0"
authors = ["dkos <kosdejan@yahoo.com>"]
edition = "2018"
categories = ["http", "rocksdb", "storage", "actix-web"]
description = "RocksDb as a service with support for multiple databases and record expiration"
exclude = [".gitignore", "docs/**"]

[dependencies]
structopt = "0.3"
actix-web = "3"
actix-web-prom = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.7.6"
log = "0.4.8"
rocksdb = "0.15.0"
confy = "0.4.0"
num_cpus = "1.0"
crossbeam = "0.7.3"
bincode = "1.3.1"
